// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Component should render a popover: popover 1`] = `
<Tooltip
  content={null}
  delayShow={500}
  id="test"
  isPopover={false}
  placement="top"
  popover="hello world"
  rootClose={true}
  trigger={
    Array [
      "hover",
    ]
  }
>
  <Tooltip
    content={<div />}
    id="test"
    popover="hello world"
  >
    <Popper
      appendTo={[Function]}
      distance={15}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onBlur={[Function]}
      onDocumentClick={false}
      onDocumentKeyDown={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPopperMouseEnter={[Function]}
      onPopperMouseLeave={[Function]}
      onTriggerEnter={[Function]}
      placement="top"
      popper={
        <div
          aria-live="off"
          className="pf-c-tooltip"
          id="test"
          popover="hello world"
          role="tooltip"
          style={
            Object {
              "maxWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <TooltipArrow />
          <TooltipContent
            isLeftAligned={false}
          >
            <div />
          </TooltipContent>
        </div>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "bottom-end": "pf-m-bottom-right",
          "bottom-start": "pf-m-bottom-left",
          "left": "pf-m-left",
          "left-end": "pf-m-left-bottom",
          "left-start": "pf-m-left-top",
          "right": "pf-m-right",
          "right-end": "pf-m-right-bottom",
          "right-start": "pf-m-right-top",
          "top": "pf-m-top",
          "top-end": "pf-m-top-right",
          "top-start": "pf-m-top-left",
        }
      }
      trigger={
        <span>
          Test popover
        </span>
      }
      zIndex={9999}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <span>
          Test popover
        </span>
      </FindRefWrapper>
    </Popper>
  </Tooltip>
</Tooltip>
`;

exports[`Tooltip Component should render a tooltip: tooltip 1`] = `
<Tooltip
  content={null}
  delayShow={500}
  id="test"
  isPopover={false}
  placement="top"
  rootClose={true}
  tooltip="hello world"
  trigger={
    Array [
      "hover",
    ]
  }
>
  <Tooltip
    content={<div />}
    id="test"
    tooltip="hello world"
  >
    <Popper
      appendTo={[Function]}
      distance={15}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onBlur={[Function]}
      onDocumentClick={false}
      onDocumentKeyDown={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPopperMouseEnter={[Function]}
      onPopperMouseLeave={[Function]}
      onTriggerEnter={[Function]}
      placement="top"
      popper={
        <div
          aria-live="off"
          className="pf-c-tooltip"
          id="test"
          role="tooltip"
          style={
            Object {
              "maxWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
          tooltip="hello world"
        >
          <TooltipArrow />
          <TooltipContent
            isLeftAligned={false}
          >
            <div />
          </TooltipContent>
        </div>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "bottom-end": "pf-m-bottom-right",
          "bottom-start": "pf-m-bottom-left",
          "left": "pf-m-left",
          "left-end": "pf-m-left-bottom",
          "left-start": "pf-m-left-top",
          "right": "pf-m-right",
          "right-end": "pf-m-right-bottom",
          "right-start": "pf-m-right-top",
          "top": "pf-m-top",
          "top-end": "pf-m-top-right",
          "top-start": "pf-m-top-left",
        }
      }
      trigger={
        <span>
          Test tooltip
        </span>
      }
      zIndex={9999}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <span>
          Test tooltip
        </span>
      </FindRefWrapper>
    </Popper>
  </Tooltip>
</Tooltip>
`;
